--- a/U_NET_MapBiomas.ipynb
+++ b/U_NET_MapBiomas.ipynb
@@ -22,7 +22,6 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import os\n",
-        "import cv2\n",
         "import random\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
@@ -1404,17 +1403,20 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
+        "USA1quqd3MVC",
         "oD6d_udUhLxu",
+        "GKkWLCoF5-mg",
         "lgfYHmz_USJs",
         "ocX-5vQDUjiD",
         "KRn5QQBlUl5T",
-        "vs9Sa1kRid1W"
+        "vs9Sa1kRid1W",
+        "vQ7DVOqJYEkR"
       ],
       "gpuType": "A100",
       "machine_shape": "hm",
       "provenance": [],
       "mount_file_id": "1qYE9SjcVfBT0s3xcMpYxR6_4YeCfsBgF",
-      "authorship_tag": "ABX9TyP/ppdOI6gGRjXH+DuCOBw0",
+      "authorship_tag": "ABX9TyP6O8Q6zMpQEWKnef1V7QFy",
       "include_colab_link": true
     },
     "kernelspec": {
